k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ba-fitscan
  labels:
    name: ba-fitscan
    app: ba-fitscan
