k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitscan
  labels:
    name: fitscan
    app: fitscan
